# simplified-sftp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
files/: generate_files.ipynb
include/: crypto.hpp  logger.hpp  main.hpp  perf.hpp  types.hpp  util.hpp  utils.hpp
src/: crypto.cpp  logger.cpp  perf.cpp  receiver.cpp  run.sh  sender.cpp
tests/: benchmark.py  generate_files.py  test.py
tests/logs/: recv.txt  send.txt
